# hello-pico

./: CMakeLists.txt  NOTES.md  README.md  main.cpp  ws2812.c
